fix inputs inconsistent padding on mobile, caption sizes on mobile

--- a/scss/_input.scss
+++ b/scss/_input.scss
@@ -1,4 +1,6 @@
 input, textarea {
+    display: inline-flex;
+    align-items: center;
     appearance: none;
     padding: 1.6rem;
     width: 100%;
